[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab>=3.4.7,<4.0.0"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["nectar-jupyterlab-theme/labextension/static/style.js"]
ensured-targets = ["nectar-jupyterlab-theme/labextension/static/style.js", "nectar-jupyterlab-theme/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["nectar-jupyterlab-theme/labextension/**", "yarn.lock", ".*", "package-lock.json"]
